syntax = "proto3";
option java_package = "com.dragonplus.network.api.protocol";
option csharp_namespace = "DragonU3DSDK.Network.API.Protocol";

import "fortunex_system.proto";
import "spinx_common.proto";
import "user_profile.proto";

message CReceiveRewardsInCoupon { // 兑换码领奖
    string coupon_id = 1;
}

message SReceiveRewardsInCoupon {
    bool success = 1;
    string mail_id = 2; // 邮件ID
}