syntax = "proto3";
option java_package = "com.dragonplus.network.api.protocol";
option csharp_namespace = "DragonU3DSDK.Network.API.Protocol";

import "fortunex_system.proto";
import "spinx_common.proto";
import "user_profile.proto";

message LocaleMailInfo {
  string title = 1;
  string message = 2;
}

message CommonReward {
  uint32 reward_id = 2;     // 奖励id
  string reward_type = 1;   // 奖励类型
  uint32 reward_value = 3;  // 奖励的数量
  string extra = 4;         // 扩展字段
}

message MailTemplateInfo {  //创建邮件时所需的结构
  LocaleMailInfo mail_info = 1;
  repeated CommonReward rewards = 2;
  map<string, LocaleMailInfo> locale_mail_infos = 3;
  uint32 mail_sub_type = 4;
  string link = 5;
  uint32 valid_time = 6;
}

message MailRewardsPB {  //解析mail.itemList用
  repeated Reward rewards = 1;
}

// 领取奖励返回信息(里面的mail.proto的bytes做转换)
message ClaimMailContentForProto {
  repeated Item item = 1;
  UserProfile user_profile = 2;
}

message PBMailVip {  // mail_sub_type = 1 ，type="MailSubTypeVipRewards"
  repeated Reward rewards = 1;
}

message
PBMailAdvertisement {  // mail_sub_type = 2 ，type="MailSubTypeAdvertisement"
  repeated Reward rewards = 1;
  string advertKey = 2;  // 广告标识，具体用法需与策划沟通
}

message PBMailSeasonEndReward {  // mail_sub_type = 3
  repeated Reward rewards = 1;
  string season_num = 2;  // season标识，如 1
}

message PBMailSeasonLeaderboardReward { // mail_sub_type = 5
  repeated Reward rewards = 1;
  uint64 rank = 2;  // 个人排名 如 1 2 3 
}

// 刷新邮件，并在必要时发送新邮件;登录以后，或weekendVipMailRefreshTime小于当前时间时发送
message CRefreshWeekendVipMail {}

//
message SRefreshWeekendVipMail {
  uint64 mailCount = 1;
  uint64 weekend_vip_mail_refresh_time = 2;
  uint64 server_time = 3;
}

// mail_sub_type = 4 表cashback 邮件 解析同GM邮件
// mail_sub_type = 6 表卡牌收集season结束邮件，解析同GM邮件
// mail_sub_type = 999 表运营兑换码兑换奖励生成的临时邮件，解析同GM邮件
// mail_sub_type = 7 表levelrush游戏的邮件，用LevelRushGameInfo解析
// mail_sub_type = 8 大富翁排行榜奖励邮件 解析同GM邮件 (items的第0个是金币)